load-balancer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: status-page
  name: ingress-status-page
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-status-page
              port:
                number: 80
